Completed feature 2 to the best of my current resources

--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -44,6 +44,7 @@ input, textarea, select {
  
     header > p {
       margin: 1em 0 0 0;
+      text-shadow: 2px 2px 4px #000000;
     }
  
   footer {
